Fixed a style which cause a layout issue on the home page

--- a/XBCAD7319_ChariTech_Website/Content/Site.css
+++ b/XBCAD7319_ChariTech_Website/Content/Site.css
@@ -240,7 +240,15 @@ footer {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
+    /* Section Headings */
+    .section h4 {
+        font-size: 18px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
 
 /*Home Page Styles*/
 /* Exhortation item styling */
@@ -417,24 +425,6 @@ footer {
     gap: 20px;
     padding: 20px;
 }
-
-/* Section Styling */
-.section {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-    /* Section Headings */
-    .section h4 {
-        font-size: 18px;
-        text-align: center;
-        margin-bottom: 20px;
-    }
 
 /* Form Inputs */
 .upload-form input,
